Fixed issue where clicking to About or Experience was clipping parts of each word. Removed top-buffer use and put id tags at top of containers. Hopefully this works and stays working across all devices. Works on Desktop and Mobile (phone, haven't tried tablet yet)

--- a/custom.css
+++ b/custom.css
@@ -7,6 +7,7 @@ body {
 h1 {
 	color: #128128;
 	font-weight: bold;
+	margin-top: 1.5em;
 }
 h2,h3{
 	color: #999;
